// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulStreamContent > Snapshot Test > Basic Streaming Content Snapshot 1`] = `
<DocumentFragment>
  <div>
    Streaming Content
  </div>
</DocumentFragment>
`;

exports[`DelightfulStreamContent > Snapshot Test > Snapshot with HTML Tag Content 1`] = `
<DocumentFragment>
  <div>
    &lt;strong&gt;Bold Text&lt;/strong&gt;
  </div>
</DocumentFragment>
`;

exports[`DelightfulStreamContent > Snapshot Test > Snapshot with Class Name 1`] = `
<DocumentFragment>
  <div
    class="custom-stream"
  >
    Streaming Content
  </div>
</DocumentFragment>
`;

exports[`DelightfulStreamContent > Snapshot Test > Snapshot with Custom Style 1`] = `
<DocumentFragment>
  <div
    style="font-size: 16px; color: blue;"
  >
    Streaming Content
  </div>
</DocumentFragment>
`;

exports[`DelightfulStreamContent > Snapshot Test > Empty Content Snapshot 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`DelightfulStreamContent > Snapshot Test > Long Text Streaming Content Snapshot 1`] = `
<DocumentFragment>
  <div>
    This is a long streaming content for testing component display
  </div>
</DocumentFragment>
`;
